--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f8f8f8;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 code {
