--- a/client/src/routes/ShowPostList/ShowPostList.css
+++ b/client/src/routes/ShowPostList/ShowPostList.css
@@ -14,8 +14,8 @@
   width: 100%;
   display: block;
   text-align: center;
-  background-color: #74b9ff;
-  border: 1px solid #68a6e4;
+  background-color: #34d482;
+  border: 1px solid #28a765;
   border-radius: 3px;
   color: #fff;
   text-decoration: none;
