--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -77,3 +77,17 @@
   cursor: default;
 }
 
+.post-controls span {
+  font-size: 25px;
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+.post-controls span:first-child {
+  margin-left: 10px;
+}
+
+.heart-icon i.fa.fa-heart {
+  color: red;
+}
+
